--- a/charts/templates/rbac.yaml
+++ b/charts/templates/rbac.yaml
@@ -22,6 +22,7 @@ rules:
   - configauditreports
   - infraassessmentreports
   - exposedsecretreports
+  - clustercompliancereports
   verbs:
   - list
   - watch
